Fixed menu z-index

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -284,7 +284,7 @@ img {
   height: 100%;
   width: 100%;
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 10; /* Sit on top */
   left: 0;
   top: 0;
   background-color: rgb(0,0,0); /* Black fallback color */
